# pandata

./: README.md  pandata.cabal  stack.yaml
lib/Pandata/: ResolveType.hs  Syntax.hs  Types.hs  Utils.hs
lib/Pandata/Format/: CSV.hs  JSON.hs  PostgreSQL.hs
