Name:                pandata
Version:             0.1
Synopsis:            Universal data converter
Description:         Convert between different formats for statistical and machine learning data

License:             MIT
License-file:        LICENSE
Author:              Tom Nielsen <tom.nielsen@tweag.io>
Maintainer:          Tom Nielsen <tom.nielsen@tweag.io>
build-type:          Simple
Cabal-Version: 	     >= 1.10
homepage:            https://github.com/glutamate/pandata
bug-reports:         https://github.com/glutamate/pandata/issues
category:            Data
Tested-With:         GHC == 7.10.2, GHC == 7.10.3, GHC == 8.0.1
extra-source-files:
                   changelog.md

source-repository head
  type:     git
  location: https://github.com/glutamate/pandata

Library
   ghc-options:       -Wall
   hs-source-dirs:    lib
   default-extensions: FlexibleContexts
                       OverloadedStrings
                       ScopedTypeVariables
                       DeriveGeneric
   default-language:  Haskell2010

   Exposed-modules:
                   Pandata.Types
                   Pandata.Syntax
                   Pandata.ResolveType
                   Pandata.Format.CSV
                   Pandata.Format.JSON
                   Pandata.Format.PostgreSQL
   Build-depends:
                   base                    >= 4.6 && < 5
                 , aeson
                 , attoparsec >= 0.13
                 , bytestring
                 , cassava
                 , hashable
                 , microlens
                 , text
                 , time
                 , vector
                 , containers
                 , wreq
                 , streaming